Project

General

Profile

Actions

Bug #43451

closed

Fails to build with gcc10 and clang9

Added by Bernd Zeimetz over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

gcc10 and clan9 both fail on

cd /<<PKGBUILDDIR>>/obj-arm-linux-gnueabihf/src/os && /usr/bin/clang++  -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -D__linux__ -I/<<PKGBUILDDIR>>/obj-arm-linux-gnueabihf/src/include -I/<<PKGBUILDDIR>>/src -I/usr/include/nss -I/usr/include/nspr -isystem /<<PKGBUILDDIR>>/obj-arm-linux-gnueabihf/include -isystem /<<PKGBUILDDIR>>/src/xxHash -isystem /<<PKGBUILDDIR>>/src/rapidjson/include -isystem /usr/include/fuse -isystem /<<PKGBUILDDIR>>/src/rocksdb/include  -g -O2 -fdebug-prefix-map=/<<PKGBUILDDIR>>=. -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -Wtype-limits -Wignored-qualifiers -Winit-self -Wpointer-arith -Werror=format-security -fno-strict-aliasing -fsigned-char -Wno-unknown-pragmas -Wno-unused-function -Wno-unused-local-typedef -Wno-varargs -Wno-gnu-designator -Wno-missing-braces -Wno-parentheses -Wno-deprecated-register -g -O2 -fdebug-prefix-map=/<<PKGBUILDDIR>>=. -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -ftemplate-depth-1024 -Wnon-virtual-dtor -Wno-unknown-pragmas -Wno-ignored-qualifiers -Wno-inconsistent-missing-override -Wno-mismatched-tags -Wno-unused-private-field -Wno-address-of-packed-member -fdiagnostics-color=auto -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -fPIC   -DHAVE_CONFIG_H -D__CEPH__ -D_REENTRANT -D_THREAD_SAFE -D__STDC_FORMAT_MACROS -std=c++17 -o CMakeFiles/os.dir/bluestore/bluestore_types.cc.o -c /<<PKGBUILDDIR>>/src/os/bluestore/bluestore_types.cc
/<<PKGBUILDDIR>>/src/os/bluestore/BlueStore.cc:5539:14: error: no matching function for call to 'p2align'
    total += p2align(len, alloc_size);
             ^~~~~~~
/<<PKGBUILDDIR>>/src/include/intarith.h:57:20: note: candidate template ignored: deduced conflicting types for parameter 'T' ('unsigned int' vs. 'unsigned long long')
constexpr inline T p2align(T x, T align) {
Actions #1

Updated by Kefu Chai over 4 years ago

  • Project changed from mgr to bluestore
  • Category deleted (Build)
  • Status changed from New to Fix Under Review
  • Assignee set to Bernd Zeimetz
  • Pull request ID set to 32484
Actions #2

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF